src/styles/IntroductionText.scss
@import 'theme.scss';
@import 'utils.scss';

#playlist-introduction-wrapper {
  background: $playlist-bg;
  padding: 50px 0 50px;
  position: relative;
  top: -35px;
  transform-style: preserve-3d;
  z-index: 4;

  #flags {
    display: flex;
    justify-content: center;
    margin-bottom: 20px;
    div {
      margin: 0 1em;
      font-size: 28px;
    }
  }

  &::before {
    background: linear-gradient(
      180deg,
      rgba(0,0,0,0) 0%,
      rgba(0,0,0,.4) 100%,
    );
    content: '';
    height: 30px;
    position: absolute;
    top: -30px;
    transform: translate3d(0, 0, 1px);
    width: 100%;
  }

  &::after {
    background: rgba(0,0,0,.4);
    content: '';
    height: 100%;
    left: 0;
    opacity: 0;
    pointer-events: none;
    position: absolute;
    top: 0;
    transition: .5s;
    width: 100%;
    z-index: 4;
  }

  &.at-top::after {
    opacity: 1;
  }

  #playlist-introduction {
    color: white;
    font-size: Clamp(22px, 2.75vw, 36px);
    margin: 0 auto;
    max-width: 800px;
    padding: 0 25px;

    #playlist-introduction-paragraph-2 {
      margin-top: 25px;
    }
  }
}

